--- a/Servicios_Jue/packages.config
+++ b/Servicios_Jue/packages.config
@@ -30,6 +30,8 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Memory" version="9.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.TimeProvider" version="8.0.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net48" />
@@ -43,17 +45,23 @@
   <package id="Microsoft.Extensions.ObjectPool" version="8.0.11" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.8.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.8.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="8.8.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="8.8.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="8.8.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.5" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
