--- a/Servicios_Jue/Servicios_Jue.csproj
+++ b/Servicios_Jue/Servicios_Jue.csproj
@@ -308,6 +308,7 @@
     <Compile Include="Clases\TokenValidationHandler.cs" />
     <Compile Include="Controllers\EmpleadosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
     <Compile Include="Controllers\TipoProductosController.cs" />
     <Compile Include="Controllers\UploadFilesController.cs" />
