--- a/Servicios_Jue/Web.config
+++ b/Servicios_Jue/Web.config
@@ -14,7 +14,6 @@
     <add key="JWT_AUDIENCE_TOKEN" value="https://localhost:44373" />
     <add key="JWT_ISSUER_TOKEN" value="https://localhost:44373" />
     <add key="JWT_EXPIRE_MINUTES" value="90" />
-
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -92,12 +91,13 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+        <bindingRedirect oldVersion="1.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EGBVJNT\SQLEXPRESS_2019;initial catalog=DBSuper;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EGBVJNT\SQLEXPRESS_2019;initial catalog=DBSuper;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db19194.databaseasp.net;initial catalog=db19194;integrated security=False;User Id=db19194; Password=Jd5=%6Yc4z-S; Encrypt=False; trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
