--- a/Servicios_Jue/packages.config
+++ b/Servicios_Jue/packages.config
@@ -4,15 +4,17 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="jQuery" version="3.7.0" targetFramework="net48" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Cors" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authentication.Core" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authorization" version="2.3.0" targetFramework="net48" />
@@ -53,6 +55,7 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="8.8.0" targetFramework="net48" />
