--- a/Servicios_Jue/Servicios_Jue.csproj
+++ b/Servicios_Jue/Servicios_Jue.csproj
@@ -311,7 +311,9 @@
     <Compile Include="Clases\clsEmpleado.cs" />
     <Compile Include="Clases\clsLogin.cs" />
     <Compile Include="Clases\clsProducto.cs" />
+    <Compile Include="Clases\clsTelefono.cs" />
     <Compile Include="Clases\clsTipoProducto.cs" />
+    <Compile Include="Clases\clsTipoTelefono.cs" />
     <Compile Include="Clases\clsUpload.cs" />
     <Compile Include="Clases\clsUsuario.cs" />
     <Compile Include="Clases\TokenGenerator.cs" />
@@ -321,7 +323,9 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
+    <Compile Include="Controllers\TelefonosController.cs" />
     <Compile Include="Controllers\TipoProductosController.cs" />
+    <Compile Include="Controllers\TipoTelefonosController.cs" />
     <Compile Include="Controllers\UploadFilesController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
