--- a/Servicios_Jue/Servicios_Jue.csproj
+++ b/Servicios_Jue/Servicios_Jue.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Clases\clsCliente.cs" />
     <Compile Include="Clases\clsCypher.cs" />
     <Compile Include="Clases\clsEmpleado.cs" />
+    <Compile Include="Clases\clsFactura.cs" />
     <Compile Include="Clases\clsLogin.cs" />
     <Compile Include="Clases\clsProducto.cs" />
     <Compile Include="Clases\clsTelefono.cs" />
@@ -320,6 +321,7 @@
     <Compile Include="Clases\TokenValidationHandler.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\EmpleadosController.cs" />
+    <Compile Include="Controllers\FacturasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
